# negotiator

./: .env.example  .gitignore  negot.db  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: c4a1b2d3e4f5_add_action_label_to_threads.py  d7e8f9a0b1c2_add_branch_label_to_threads.py  e691a07c4161_add_template_drafts_and_fact_provenance.py
docs/: ADMIN_REVIEW.md  API.md  ARCHITECTURE.md  DATA_MODEL.md  DEPENDENCIES.md  EVENTS.md  REQUIREMENTS.md  SAFETY.md  SETUP.md  TEMPLATES.md  WEB_GROUNDING.md
legacy/: .env.example  README.md
legacy/alembic/versions/: b1c3d5e7f9a0_add_message_threads.py
legacy/docs/legacy/: ADMIN_REVIEW.md  ARCHITECTURE.md  DATA_MODEL.md  REQUIREMENTS.md  SAFETY.md  SETUP.md  TEMPLATES.md  WEB_GROUNDING.md
legacy/src/: __init__.py
legacy/src/negot/: README.md  __init__.py
legacy/strategy_pack/: README.md
legacy/strategy_pack/docs/: STRATEGY_SYSTEM.md
legacy/tests/: test_sessions.py
legacy/web_canvas/: index.html  package.json
prototype/: README.md  main.py  requirements.txt
prototype/docs/: AGENTS.md  API.md  SCHEMAS.md  SPEC.md
prototype/tests/: test_engine_action.py
src/negot/: README.md  __init__.py
strategy_pack/: README.md
strategy_pack/schemas/: artifact.schema.json  case_snapshot.schema.json  common.schema.json  conditions.schema.json  rubric.schema.json  strategy_pack.schema.json  strategy_selection_io.schema.json  strategy_template.schema.json
tests/: __init__.py  test_sessions.py
web_canvas/: package-lock.json  vite.config.js
web_canvas/src/: App.jsx  StrategyRuntime.jsx  flowLayout.js  styles.css
(+144 files in other folders)
